[Post] stack - 오타 수정 및 코드 추가

--- a/cs/datastructure/_posts/2019-02-17-stack.md
+++ b/cs/datastructure/_posts/2019-02-17-stack.md
@@ -3,7 +3,7 @@ sidebar:
   title: "CS"
   nav: sidebar-cs
   icon: "fas fa-microchip"
-title: "[Swiift] Stack"
+title: "[Swift] Stack"
 toc: true
 toc_sticky: true
 toc_label: 목차
@@ -22,15 +22,6 @@ LIFO 특성을 가지는 자료구조(Data Structure)를 일컫는다.
 
 스택이라는 자료구조는 프로세스를 구성하는 4개의 요소 중 한 부분이며 함수의 호출에 관여한다.  
 
-## 스택 프레임
-어떤 함수든 호출되는 순간 스택에 그 함수를 위한 영역(스택 프레임 stack frame)이 할당된다.
-함수가 호출될 때마다 스택에 값들이 쌓이고, 계산이 끝나면 다시 하나씩 빼면서 출력값이 가장 밑에 있던 리턴 공간으로 돌아오는 것이다.   
-
-## 재귀
-함수가 함수를 호출하거나 자기 자신을 호출하는 것도 스택에 기반을 두고 있다.  
-재귀가 연산속도에서 불리한 점이 발생한다.
-재귀 알고리즘을 사용할 때는 반드시 재귀 알고리즘이 필요한지 설계를 먼저 정확히 하는 것이 중요하다.  
-
 ## 컴파일러가 출력하는 에러
 스택처럼 맨 마지막 에러가 가장 먼저 출력되는 순서를 보인다.
 
@@ -38,16 +29,155 @@ LIFO 특성을 가지는 자료구조(Data Structure)를 일컫는다.
  LIFO 형태로 할당하고 접근하는 구조인 아키텍처 레벨의 하드웨어 스택의 이름으로도 널리 사용된다.
 
 ## 구현
-배열을 이용한 구현
+### 배열을 이용한 구현
 
 ```swift
+struct Stack<Element> {
+  private var elements: [Element] = []
 
+  // Stack에 원소를 추가
+  mutating func push(_ item: Element) {
+    elements.append(item)
+  }
+
+  // Stack에서 원소를 제거하고 반환
+  mutating func pop() -> Element? {
+    return elements.popLast()
+  }
+
+  // Stack의 맨 위 원소를 반환
+  func peek() -> Element? {
+    return elements.last
+  }
+
+  // Stack이 비어있는지 확인
+  func isEmpty() -> Bool {
+    return elements.isEmpty
+  }
+
+  // Stack의 원소 수를 반환
+  func count() -> Int {
+    return elements.count
+  }
+}
+
+// Stack을 사용
+var stack = Stack<Int>()
+
+// 원소 추가
+stack.push(1)
+stack.push(2)
+stack.push(3)
+
+// 원소 제거
+print(stack.pop()) // 출력: Optional(3)
+
+// 맨 위 원소 확인
+print(stack.peek()) // 출력: Optional(2)
+
+// Stack이 비어있는지 확인
+print(stack.isEmpty()) // 출력: false
+
+// Stack의 원소 수 확인
+print(stack.count()) // 출력: 2
 ```
 
-LinkedList 를 이용한 구현
+### LinkedList 를 이용한 구현
 
 ```swift
+class LinkedListNode<Element> {
+  var value: Element
+  var next: LinkedListNode?
 
+  init(value: Element) {
+    self.value = value
+  }
+}
+
+class LinkedList<Element> {
+  private var head: LinkedListNode<Element>?
+
+  var isEmpty: Bool {
+    return head == nil
+  }
+
+  func append(_ value: Element) {
+    let newNode = LinkedListNode(value: value)
+    if let lastNode = lastNode() {
+      lastNode.next = newNode
+    } else {
+      head = newNode
+    }
+  }
+
+  func lastNode() -> LinkedListNode<Element>? {
+    var currentNode = head
+    while currentNode?.next != nil {
+      currentNode = currentNode?.next
+    }
+    return currentNode
+  }
+
+  func removeLast() -> Element? {
+    guard let head = head else {
+      return nil
+    }
+    if head.next == nil {
+      let value = head.value
+      self.head = nil
+      return value
+    }
+
+    var prev = head
+    var current = head
+
+    while let next = current.next {
+      prev = current
+      current = next
+    }
+
+    prev.next = nil
+    return current.value
+  }
+}
+
+// LinkedList를 사용하여 Stack을 구현
+struct Stack<Element> {
+  private var linkedList = LinkedList<Element>()
+
+  var isEmpty: Bool {
+    return linkedList.isEmpty
+  }
+
+  mutating func push(_ value: Element) {
+    linkedList.append(value)
+  }
+
+  mutating func pop() -> Element? {
+    return linkedList.removeLast()
+  }
+
+  func peek() -> Element? {
+    return linkedList.lastNode()?.value
+  }
+}
+
+// 구현한 Stack을 사용
+var stack = Stack<Int>()
+
+// 원소 추가
+stack.push(1)
+stack.push(2)
+stack.push(3)
+
+// 원소 제거
+print(stack.pop()) // 출력: Optional(3)
+
+// 맨 위 원소 확인
+print(stack.peek()) // 출력: Optional(2)
+
+// Stack이 비어있는지 확인
+print(stack.isEmpty) // 출력: false
 ```
 
 
