Update domain to blog.gorani.me

--- a/clean/think/_posts/2018-09-05-today.md
+++ b/clean/think/_posts/2018-09-05-today.md
@@ -55,3 +55,5 @@ depth:
 
 평소 작은 부분부터 개선할 수 있는 부분을 찾아 나가는 것은 매우 중요하다고 생각한다.  
 어제보다 오늘 만든 것이 더 좋다면, 어제보다 오늘 더 좋은 개발자가 된거다!  
+
+![Image](https://image.aladin.co.kr/product/13559/25/cardview/8925563355_t1.jpg)
